# cpp-opencv

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  lenna.cpp  opencv_test.cpp
IntroductionToOpenCV/: lenna.cpp  starry_night.cpp
TheCoreFunctionality/: mat.cpp
